testsuite/tests/rename/should_fail/RnMultipleFixityFail.hs
module RnMultipleFixityFail where


($$) = ($)

infixr 4 $$
infixl 6 $$
